client/src/app/components/shared/data/data.component.scss
@import '../../../../variables';

.data {
  @media (max-width: $small-max-width) {
    padding-bottom: 20px;
  }
  @media (min-width: $medium-min-width) {
    margin-bottom: 25px;
  }
}

.data2 {
  @media (max-width: $small-max-width) {
    padding-bottom: 20px;
  }
  @media (min-width: $medium-min-width) {
    margin-bottom: 0.5em;
  }
}

.title {
  @media (max-width: $small-max-width) {
    overflow: hidden;
    text-overflow: 'ellipsis';
    white-space: nowrap;
    padding: 5px;
    left: 10px;
    right: 10px;
    border-top-width: 1px;
    border-top-style: solid;
    border-top-color: lightgray;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: lightgray;
  }
  @media (min-width: $medium-min-width) {
    float: left;
    width: 160px;
    overflow: hidden;
    clear: left;
    text-overflow: 'ellipsis';
    white-space: nowrap;
    color: black;
  }
}

.body {
  min-height: 1px;
  @media (max-width: $small-max-width) {
    margin: 15px;
  }
  @media (min-width: $medium-min-width) {
    margin-left: 180px;
  }
}

